# amar

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRACTS.md  CONVENTIONS.md  Cargo.toml  Containerfile  DATA.md  DATA_LICENSES.md  DECISION.md  LICENSE  LIMITATIONS.md  MVP.md  Makefile  PLAN.md  PREMORTEM.md  README.md  prompt.md
.github/workflows/: audit-cron.yml  ci.yml  container.yml  ingestion-drift.yml  release.yml
benches/: m4_calibrate.rs  m4_core.rs
crates/amar/: Cargo.toml
crates/amar-calibrate/: Cargo.toml
crates/amar-calibrate/src/: common.rs  diagnose.rs  fetch.rs  france.rs  history.rs  ib.rs  main.rs  pack_out.rs  qc.rs  solve.rs
crates/amar-core/: Cargo.toml
crates/amar-core/src/: astro.rs  constituents.rs  extrema.rs  lib.rs  nodal.rs  types.rs
crates/amar-data/: Cargo.toml
crates/amar-data/src/: lib.rs
crates/amar-data/tests/: noaa_golden.rs
crates/amar-pack/: Cargo.toml
crates/amar-pack/src/: lib.rs
crates/amar/src/: cli_common.rs  coefficient.rs  contract.rs  hilo.rs  lib.rs  main.rs  server.rs
crates/amar/tests/: cli.rs  frozen_shas.rs  m3.rs  server.rs
crates/amar/tests/snapshots/: tide_brest_422.json  tide_brest_experimental.json  tide_invalid_400.json  tide_nominal_sf.json
data/: stations.txt
data/packs/: amar-data-brest-experimental.json  amar-data-france-experimental.json  noaa_m0.json
fixtures/noaa/1612340/: datums.json  harcon.json  hilo_2026-08-15_2026-08-21.json  predictions_2026-08-15_2026-08-21.json  predictions_2031-08-15_2031-08-21.json  predictions_2036-08-15_2036-08-21.json  station.json
fixtures/noaa/8410140/: datums.json  harcon.json  hilo_2026-08-15_2026-08-21.json  hilo_2031-08-15_2031-08-21.json  predictions_2026-08-15_2026-08-21.json  predictions_2031-08-15_2031-08-21.json  predictions_2036-08-15_2036-08-21.json  station.json
fixtures/noaa/8443970/: datums.json  harcon.json  hilo_2026-08-15_2026-08-21.json  predictions_2026-08-15_2026-08-21.json  predictions_2031-08-15_2031-08-21.json  predictions_2036-08-15_2036-08-21.json  station.json
fixtures/noaa/8724580/: datums.json  harcon.json  hilo_2026-08-15_2026-08-21.json  predictions_2026-08-15_2026-08-21.json  predictions_2031-08-15_2031-08-21.json  predictions_2036-08-15_2036-08-21.json  station.json
fixtures/noaa/8729840/: datums.json  harcon.json  hilo_2026-08-15_2026-08-21.json  predictions_2026-08-15_2026-08-21.json  predictions_2031-08-15_2031-08-21.json  predictions_2036-08-15_2036-08-21.json  station.json
fixtures/noaa/8771450/: datums.json  harcon.json  hilo_2026-08-15_2026-08-21.json  predictions_2026-08-15_2026-08-21.json  predictions_2031-08-15_2031-08-21.json  predictions_2036-08-15_2036-08-21.json  station.json
fixtures/noaa/9414290/: datums.json  harcon.json  hilo_2026-08-15_2026-08-21.json  predictions_2026-08-15_2026-08-21.json  predictions_2031-08-15_2031-08-21.json  predictions_2036-08-15_2036-08-21.json  station.json
fixtures/noaa/9447130/: datums.json  harcon.json  hilo_2026-08-15_2026-08-21.json  hilo_2031-08-15_2031-08-21.json  predictions_2026-08-15_2026-08-21.json  predictions_2031-08-15_2031-08-21.json  predictions_2036-08-15_2036-08-21.json  station.json
fixtures/open_meteo/: brest_surface_pressure_2026-04-01_2026-06-30.json
fixtures/refmar/: benchmark_brest_v1.json  brest_tidegauge.json  brest_validated_hourly_2021-01-01_2026-07-01.csv  brest_validated_hourly_2025-01-01_2026-07-01.csv
fixtures/refmar/benchmarks/: benchmark_arcachon_eyrac_v1.json  benchmark_boucau_bayonne_v1.json  benchmark_boulogne_sur_mer_v1.json  benchmark_calais_v1.json  benchmark_cherbourg_v1.json  benchmark_concarneau_v1.json  benchmark_dielette_v1.json  benchmark_dieppe_v1.json  benchmark_dunkerque_v1.json  benchmark_herbaudiere_v1.json  benchmark_la_rochelle_pallice_v1.json  benchmark_le_conquet_v1.json  benchmark_le_crouesty_v1.json  benchmark_le_havre_v1.json  benchmark_le_havre_v2.json  benchmark_les_sables_d_olonne_v1.json  benchmark_mimizan_v1.json  benchmark_noumea_numbo_v1.json  benchmark_ouistreham_v1.json  (+5 more)
(+32 files in other folders)
