[workspace]
members = [
    "crates/amar-core",
    "crates/amar-pack",
    "crates/amar-data",
    "crates/amar",
    "crates/amar-calibrate",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
amar-core = { path = "crates/amar-core" }
amar-pack = { path = "crates/amar-pack" }
amar-data = { path = "crates/amar-data" }
axum = "0.8.4"
chrono = { version = "0.4.42", default-features = false, features = ["std", "serde"] }
clap = { version = "4.5.42", features = ["derive"] }
http-body-util = "0.1.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower = { version = "0.5.2", features = ["util"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
