[package]
name = "amar-calibrate"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
amar-core.workspace = true
amar-pack.workspace = true
chrono.workspace = true
clap.workspace = true
nalgebra.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
amar-data.workspace = true

[lints]
workspace = true
