[package]
name = "amar-data"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
amar-core.workspace = true
amar-pack.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[lints]
workspace = true
