[package]
name = "amar"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
amar-core.workspace = true
amar-data.workspace = true
amar-pack.workspace = true
axum.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tower.workspace = true

[lints]
workspace = true
