[package]
name = "amar"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
amar-core.workspace = true
amar-data.workspace = true
amar-pack.workspace = true
axum.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
criterion.workspace = true
http-body-util.workspace = true
sha2.workspace = true
tower.workspace = true

[[bench]]
name = "m4_core"
path = "../../benches/m4_core.rs"
harness = false

[lints]
workspace = true
